# ZooPlug

./: .gitignore  CHANGELOG.ja.md  CHANGELOG.md  CMakeLists.txt  Info.plist  Info.plist.in  License.txt  README.ja.md  README.md
Headers/FMWrapper/: FMXCalcEngine.h  FMXClient.h  FMXExtern.h
Libraries/macOS/FMWrapper.framework/Versions/A/: FMWrapper
Libraries/macOS/FMWrapper.framework/Versions/A/Headers/: FMXCalcEngine.h  FMXClient.h  FMXData.h  FMXExtern.h  FMXTextStyle.h  FMXTypes.h
Libraries/macOS/FMWrapper.framework/Versions/A/Resources/: Info.plist
Libraries/win64/: FMWrapper.lib
Source/: DialogOps.cpp  DialogOps.h  DialogOps_mac.mm  FileOps.cpp  FileOps.h  HashImpl.cpp  HashImpl.h  HotkeyOps.cpp  HotkeyOps.h  MooError.cpp  MooError.h  NetOps.cpp  NetOps.h  PowerShellExec.cpp  PowerShellExec.h  PrinterOps.cpp  PrinterOps.h  ProcessOps.cpp  ProcessOps.h  ProcessRun.cpp  ProcessRun.h  ProgressOps.cpp  ProgressOps.h  ShellExec.cpp  ShellExec.h  Variant.h  ZipOps.cpp  ZipOps.h  ZooPlug.cpp  ZooPlug.rc
docs/: function-reference.ja.md  function-reference.md  verification-walkthrough.ja.md  verification-walkthrough.md  zoo-plug-implementation-spec.ja.md  zoo-plug-implementation-spec.md  zoo-powershell-design.ja.md  zoo-powershell-design.md
scripts/: build-and-sign-mac.sh  build-linux.sh  build-windows-plugin.bat  sign-windows-plugin.ps1  test-windows.bat
tests/: test_fileops.cpp  test_hash.cpp  test_hotkeyops.cpp  test_mooerror.cpp  test_netops.cpp  test_powershellexec.cpp  test_printerops.cpp  test_processops.cpp  test_progressops.cpp  test_shellexec.cpp  test_zipops.cpp
